--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ asgiref==3.8.1
 crispy-bootstrap5==2024.10
 Django==5.1.3
 django-crispy-forms==2.3
-sqlparse==0.5.2
-gunicorn ==20.1.0
-psycopg2-binary
+gunicorn==20.1.0
+psycopg2-binary==2.9.10
 pytz==2021.1
-
+setuptools==75.6.0
+sqlparse==0.5.2
